--- a/resources/assets/sass/base/_animations.scss
+++ b/resources/assets/sass/base/_animations.scss
@@ -78,3 +78,14 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+@keyframes pulse {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+}
+  100% {
+    transform: scale(3.5);
+    opacity: 0;
+}
+}
