Storage Page echancement part 2

--- a/resources/assets/sass/base/_colors.scss
+++ b/resources/assets/sass/base/_colors.scss
@@ -21,7 +21,9 @@ $pink: #FD53BF;
 .textBlack {
     color: $black;
 }
-
+.green {
+    background: $green!important;
+}
 // background gradient 
 .gradientBlue {
     background-color: #49b3f9;
