--- a/resources/assets/sass/layouts/_dashboard-students.scss
+++ b/resources/assets/sass/layouts/_dashboard-students.scss
@@ -205,37 +205,42 @@ ul.navigationWrap-items li a {
     display: inline-flex;
 }div.projectPeople > div:nth-child(n + 2) { margin-left: -8px;}
 .createProjectPopup__header {
-    text-align: center;
     @extend .paddingTop-xs;
     @extend .paddingBottom-xs;
-    p {
-        color: $black-young;
-    }
+    @extend .paddingLeft-xs;
+    @extend .paddingRight-xs;
 }
 .createProjectPopup__content {
     position: relative;
 }.createProjectPopup__content__cover {
     width: 100%;
-    height: 200px;
-    @extend .overflow-disable;
+    text-align: center;
+    img {
+        width: 100px;
+        @extend .marginTop-s;
+        @extend .marginBottom-s;
+    }
+    p {
+        font-size: 20px;
+        color: $black-young;
+    }
+    .createProjectCover--tips {
+        text-align: center;
+        @extend .marginMagic;
+        @extend .marginTop-xs;
+        max-width: 70%;
+        span {
+            font-size: 12px;
+            color: $grey;
+        }
+    }
 }.createProjectPopup__content form {
     @extend .popupContent__desc;
     padding-top: 25px!important;
 }.createProjectPopup__content__title input {
-    border: none;
-    outline: none;
-    font-size: 25px;
-    color: $black-young;
-    font-weight: 600;
-    @extend .marginBottom-s;
+
 }.createProjectPopup__content__desc textarea {
-    outline: none;
-    border: none;
-    color: $black-young;
-    width: 100%;
-    font-size: 12px;
-    font-weight: 500;
-    resize: none;
+
 }.createProjectPopup__footer {
     @extend .paddingAppear-n;
 }div.createProjectPopup__footer > button:nth-child(1) { margin-bottom: 10px;}
