--- a/resources/assets/sass/components/_input.scss
+++ b/resources/assets/sass/components/_input.scss
@@ -1,6 +1,16 @@
 @import "./../base/colors";
 @import "./../base/prefix";
 
+.select {
+    @extend .input;
+}
+
+.select--primary {
+    @extend .input--primary;
+    width: 200px!important;
+    height: 30px;
+}
+
 .input {
     font-size: 14px;
     outline: none;
@@ -33,3 +43,55 @@
 .input-danger {
     border-color: $red;
 }
+
+.checkbox--circle {
+    position: relative;
+    @extend .marginRight-s;
+    font-weight: 500;
+  }
+  
+  .checkbox--circle label {
+    transition: all 150ms linear;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 18px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 18px;
+    &:focus, &:hover {
+        border: 1px solid $blue;
+        background: #eef7fe;
+    }
+  }
+  
+  .checkbox--circle label:after {
+    border: 2px solid #fff;
+    border-top: none;
+    height: 4px;
+    left: 4px;
+    opacity: 0;
+    position: absolute;
+    top: 4px;
+    transition: all 150ms linear;
+    border-right: none;
+    content: "";
+    transform: rotate(-45deg);
+    width: 6px;
+  }
+  
+  .checkbox--circle input[type="checkbox"] {
+    visibility: hidden;
+  }
+  
+  .checkbox--circle input[type="checkbox"]:checked + label {
+    background-color: $green;
+    border-color: $green;
+    transition: all 150ms linear;
+  }
+  
+  .checkbox--circle input[type="checkbox"]:checked + label:after {
+    opacity: 1;
+  }
