update logo identity and 404

--- a/resources/assets/sass/components/_extras.scss
+++ b/resources/assets/sass/components/_extras.scss
@@ -94,6 +94,13 @@
     }
 }
 
+// logo setting 
+.logo-small {
+    img {
+        width: 30px;
+        height: 30px;
+    }
+}
 
 // loading 
 .shield-pulse{
