--- a/resources/assets/sass/layouts/_dashboard-students.scss
+++ b/resources/assets/sass/layouts/_dashboard-students.scss
@@ -388,6 +388,12 @@ ul.navigationWrap-items li a {
         }
     }
 }
+.explore {
+    width: 120px;
+    margin: 0 auto;
+    position: relative;
+}
+
 
 // custom 
 
