update color headline project

--- a/resources/assets/sass/components/_extras.scss
+++ b/resources/assets/sass/components/_extras.scss
@@ -172,8 +172,8 @@
 }.headline--done {
     background-color: $green-darken;
 }.headline--waiting{
-    background-color: $yellow;
-    color: $yellow-darken;
+    background-color: $yellow-darken;
+    color: white;
 }.headline--disabled{
     background: $black;
 }
