--- a/resources/assets/sass/layouts/_login--students.scss
+++ b/resources/assets/sass/layouts/_login--students.scss
@@ -59,6 +59,14 @@
     }
 }
 
+.formBlock--inline {
+    display: flex;
+    justify-content: space-between;
+    input {
+        width: 48%;
+    }
+}
+
 .coverContent {
     @extend .formContent;
     position: relative;
