--- a/resources/assets/sass/layouts/_getstart.scss
+++ b/resources/assets/sass/layouts/_getstart.scss
@@ -27,4 +27,8 @@
         font-size: 12px;
         color: #999;
     }
+}.start__content{
+    @extend .marginTop-s;
+    @extend .marginMagic;
+    width: calc(90% - 30px);
 }
