--- a/resources/assets/sass/layouts/_getstart.scss
+++ b/resources/assets/sass/layouts/_getstart.scss
@@ -31,4 +31,6 @@
     @extend .marginTop-s;
     @extend .marginMagic;
     width: calc(90% - 30px);
+}.start--loading {
+    animation: heartbeat .9s ease-out infinite;
 }
