Update dynamic project && fix can't scroll project list

--- a/resources/assets/sass/layouts/_dashboard-students.scss
+++ b/resources/assets/sass/layouts/_dashboard-students.scss
@@ -160,6 +160,11 @@ ul.navigationWrap-items li a {
     height: 100vh;
     min-width: 750px;
 }
+
+#project {
+    overflow-y: auto;
+}
+
 #projectItems {
     display: inline-flex;
     flex-wrap: wrap;
