--- a/resources/assets/sass/components/_extras.scss
+++ b/resources/assets/sass/components/_extras.scss
@@ -189,7 +189,7 @@
 .shield-pulse--core {
     width: 50px;
     height: 50px;
-    margin: 0 auto;
+    @extend .marginMagic;
     position: relative;
     &::before{
         background-color: rgba(67, 68, 69, 0.51);
