--- a/resources/assets/sass/layouts/_login--students.scss
+++ b/resources/assets/sass/layouts/_login--students.scss
@@ -32,7 +32,7 @@
             max-width: 322px;
             width: calc(100% - 30px);
             padding: 32px 4px;
-            margin: 0 auto;
+            @extend .marginMagic;
         }
     }
 }
