--- a/resources/assets/sass/layouts/_dashboard-students.scss
+++ b/resources/assets/sass/layouts/_dashboard-students.scss
@@ -74,6 +74,7 @@ ul.navigationWrap-items li a {
     padding: 0 12px;
     color: #999;
     font-size: 14px;
+    font-weight: 500;
     cursor: pointer;
     text-decoration: none!important;
 }
