Update : starting to revamp storage page
- [FIXED] bug loading causing block render

--- a/resources/assets/sass/layouts/_loading.scss
+++ b/resources/assets/sass/layouts/_loading.scss
@@ -1,5 +1,10 @@
 #loader {
-    width: 100%;
+    @extend .universe;
+    z-index: 999;
+    background: white;
+}
+
+.loader__content {
     height: 100vh;
 }
 
